--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+TicTacToe.defaultPlayerCount = 2
+TicTacToe.defaultBoardSize = 3
+TicTacToe.gameId = "TicTacToe"
 
+ConnectFour.defaultPlayerCount = 2
+ConnectFour.defaultBoardSize = 7
+ConnectFour.gameId = "ConnectFour"
+
+Taquin.defaultPlayerCount = 1
+Taquin.defaultBoardSize = 4
+Taquin.gameId = "Taquin"
