--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+#Default translations
+Game.TicTacToe.name=TicTacToe
+Game.ConnectFour.name=ConnectFour
+Game.Taquin.name=Magic15
+
 # Values for games
 TicTacToe.defaultPlayerCount=2
 TicTacToe.defaultBoardSize=3
@@ -15,3 +20,13 @@ Taquin.gameId=Taquin
 
 application.persistence.mode=local
 #application.persistence.mode=mysql
+
+
+spring.h2.console.enabled=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:6603/BoardGameDatabase
+spring.datasource.username=root
+spring.datasource.password=helloworld
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
