--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,12 @@ Taquin.gameId=Taquin
 application.persistence.mode=local
 #application.persistence.mode=mysql
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:6603/BoardGameDatabase
 spring.datasource.username=root
 spring.datasource.password=helloworld
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.file.path=.
+logging.file.name=logs
 #spring.jpa.show-sql: true
