--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ Taquin.gameId=Taquin
 application.persistence.mode=local
 #application.persistence.mode=mysql
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:6603/BoardGameDatabase
 spring.datasource.username=root
 spring.datasource.password=helloworld
