--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,14 +12,18 @@ ConnectFour.gameId=ConnectFour
 Taquin.defaultPlayerCount=1
 Taquin.defaultBoardSize=4
 Taquin.gameId=Taquin
+
+#API
+api.url=http://localhost:8082
+
 # Application properties
 application.persistence.mode=local
 #application.persistence.mode=mysql
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:6603/BoardGameDatabase
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/BoardGameDatabase
 spring.datasource.username=root
-spring.datasource.password=helloworld
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.file.path=.
